# haskell-sandbox

./: LICENSE  README.md  haskell-sandbox.cabal  stack.yaml
app/: AminoParser.hs  FastaParser.hs  Main.hs  Neo4jLoad.hs  PDBParser.hs
src/: AminoAcid.hs  AminoAcidPDB.hs  Neo4j.hs
src/Parser/: Fasta.hs  PDB.hs
test/: Spec.hs
