name:                haskell-sandbox
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mosigo/haskell-sandbox#readme
license:             BSD3
license-file:        LICENSE
author:              Olga Bolshakova
maintainer:          oabolshakova@biocad.ru
copyright:           2017
category:            Bioinformatics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Neo4j
                     , Parser.Fasta
                     , Parser.PDB
                     , AminoAcid
                     , AminoAcidPDB
  build-depends:       base >= 4.7 && < 5
                     , hasbolt
                     , text
                     , parsec
                     , linear
  default-language:    Haskell2010
  ghc-options:         -Wall -fprof-auto

executable neo4j-load
  hs-source-dirs:      app
  main-is:             Neo4jLoad.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fprof-auto
  build-depends:       base
                     , haskell-sandbox
                     , hasbolt
                     , strict
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall

executable fasta-parser
  hs-source-dirs:      app
  main-is:             FastaParser.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fprof-auto
  build-depends:       base
                     , haskell-sandbox
                     , parsec
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall

executable pdb-parser
  hs-source-dirs:      app
  main-is:             PDBParser.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fprof-auto
  build-depends:       base
                     , haskell-sandbox
                     , parsec
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall

executable pdb-aminos
  hs-source-dirs:      app
  main-is:             AminoParser.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fprof-auto
  build-depends:       base
                     , haskell-sandbox
                     , parsec
                     , text
                     , linear
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite haskell-sandbox-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-sandbox
                     , QuickCheck
                     , hspec
                     , parsec
                     , text
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mosigo/haskell-sandbox
